network.tf
# Resources required for setting up internet connection within the public subnet

# Requires internet gateway to connect to the internet
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.nf_vpc.id

    tags = {
        Name = "internet gateway"
    }
}

# Create route to internet gateway
resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.nf_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = {
        Name = "public route table"
    }
}

# Associate public route to public subnet
resource "aws_route_table_association" "public_subnet_association" {
    subnet_id      = aws_subnet.public_subnet.id
    route_table_id = aws_route_table.public_route_table.id
}


# Resources required for setting up connections within the private subnet

# Create NAT gateway for private subnets 
resource "aws_nat_gateway" "nat" {
    subnet_id           = aws_subnet.private_subnet_1.id
    connectivity_type   = "private"
    
    tags = {
        Name = "nat gateway"
    }
}

# Create route to NAT gateway
resource "aws_route_table" "private_route_table" {
    vpc_id = aws_vpc.nf_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_nat_gateway.nat.id
    }

    tags = {
        Name = "private route table"
    }
}

# Associate private route to private subnets 
resource "aws_route_table_association" "private_subnet_1_association" {
    subnet_id      = aws_subnet.private_subnet_1.id
    route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_subnet_2_association" {
    subnet_id      = aws_subnet.private_subnet_2.id
    route_table_id = aws_route_table.private_route_table.id
}
